--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -79,6 +79,18 @@ services:
     volumes:
       - elasticdata:/usr/share/elasticsearch/data/
 
+  grafana:
+    image: grafana/grafana
+    networks:
+      - argilla
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    ports:
+     - '3000:3000'
+    volumes:
+      - ./grafana:/etc/grafana/provisioning/datasources
+
   redis:
     image: redis
     networks:
